fixed playlist, add scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,6 @@ main {
 
 .row.navigation {
   height: 100%;
-  justify-content: space-between;
   flex-direction: column;
   flex-wrap: nowrap;
   margin-left: 0;
@@ -106,14 +105,6 @@ main {
   display: none;
 }
 
-.navigation-list {
-  padding: 10px;
-}
-
-.bottom-logos {
-  padding: 10px;
-}
-
 .download-img {
   width: 15px;
   display: block;
@@ -126,6 +117,15 @@ main {
   width: 25px;
   overflow: hidden;
   aspect-ratio: 1;
+}
+
+.profile-pic {
+  display: flex;
+  justify-content: center;
+}
+
+.download-button {
+  margin-top: auto;
 }
 
 /* MAIN PAGE */
@@ -249,11 +249,6 @@ a:hover {
     --playlist-width: 200px;
   }
 
-  .playlist .container {
-    padding-left: 1rem;
-    padding-right: 1rem;
-  }
-
   .hidden.logo {
     display: block;
   }
@@ -267,13 +262,17 @@ a:hover {
   }
 
   .navigation-list {
-    padding: 10px 5px;
+    padding: 5px 0px;
     margin-bottom: 20px;
   }
 
   .navigation-list div {
     display: flex;
     align-items: center;
+  }
+
+  .navigation-list div:hover {
+    border-left: 3px solid lime;
   }
 
   .main-logo {
@@ -287,6 +286,9 @@ a:hover {
 
   .current-playlist {
     padding: 0 5px;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
   }
 
   .new-playlist {
@@ -294,13 +296,22 @@ a:hover {
     align-items: center;
   }
 
-  .fa-solid.fa-plus {
+  .add-playlist {
     background-color: gray;
-    font-size: 4rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+  }
+
+  .fa-solid.fa-plus {
+    font-size: 1rem;
   }
 
   ul {
     padding-top: 1rem;
+    overflow: auto;
   }
   li {
     line-height: 2rem;
@@ -310,8 +321,7 @@ a:hover {
     display: flex;
     align-items: center;
     border-bottom: 1px solid #86898c;
-    margin-bottom: 20px;
-    padding-bottom: 10px;
+    padding: 10px 10px;
   }
 
   .download-img {
@@ -319,8 +329,9 @@ a:hover {
   }
 
   .profile-pic {
-    display: flex;
     align-items: center;
+    justify-content: flex-start;
+    padding: 0px 10px;
   }
 
   .profile {
